[fix] make modal scroll more smothly on mobile device

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -2,15 +2,15 @@
 
 .modal {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   left: 0;
   top: 0;
   background: rgba(0, 0, 0, 0.6);
   z-index: $z-index-9;
-  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   overflow-x: hidden;
 
   .modalContent {
